# natstat-cli

./: README.md  main.py  pyproject.toml
src/natstat_cli/: __init__.py  main.py  util.py
