[project]
name = "natstat-cli"
version = "0.1.0"
description = "A command line interface for the National Statistical API"
readme = "README.md"
authors = [
    { name = "jhelderman", email = "10335331+jhelderman@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "natstat",
]

[project.scripts]
natstat = "natstat_cli.main:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
natstat = { git = "https://github.com/jhelderman/natstat-py" }
